force-app/volunteers/objects/VolunteerShift__c/VolunteerShift__c.object-meta.xml
<CustomObject>
    <label>Volunteer Shift</label>
    <nameField>
        <displayFormat>Shift-{00000}</displayFormat>
        <label>Volunteer Shift Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Volunteer Shifts</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>