force-app/volunteers/objects/VolunteerShift__c/fields/DesiredNumberOfVolunteers__c.field-meta.xml
<CustomField>
    <fullName>DesiredNumberOfVolunteers__c</fullName>
    <label>Desired Number of Volunteers</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>