force-app/volunteers/objects/VolunteerShift__c/fields/Location__c.field-meta.xml
<CustomField>
    <fullName>Location__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Location</label>
    <referenceTo>Location</referenceTo>
    <relationshipLabel>Volunteer Shifts</relationshipLabel>
    <relationshipName>VolunteerShifts</relationshipName>
    <type>Lookup</type>
</CustomField>