force-app/volunteers/objects/VolunteerShift__c/fields/MinimumVolunteersNeeded__c.field-meta.xml
<CustomField>
    <fullName>MinimumVolunteersNeeded__c</fullName>
    <label>Minimum Volunteers Needed</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>