force-app/volunteers/objects/VolunteerShift__c/fields/NumberOfVolunteersNeeded__c.field-meta.xml
<CustomField>
    <fullName>NumberOfVolunteersNeeded__c</fullName>
    <formula>MAX(0, BLANKVALUE(DesiredNumberOfVolunteers__c, 0) - BLANKVALUE(TotalVolunteers__c, 0))</formula>
    <label>Number of Volunteers Needed</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>