force-app/volunteers/objects/VolunteerShift__c/fields/VolunteerActivity__c.field-meta.xml
<CustomField>
    <fullName>VolunteerActivity__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Volunteer Activity</label>
    <referenceTo>VolunteerActivity__c</referenceTo>
    <relationshipLabel>Volunteer Shifts</relationshipLabel>
    <relationshipName>VolunteerShifts</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>