force-app/volunteers/objects/VolunteerShift__c/fields/VolunteersAssigned__c.field-meta.xml
<CustomField>
    <fullName>VolunteersAssigned__c</fullName>
    <label>Volunteers Assigned</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>