force-app/volunteers/objects/VolunteerShift__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>StartDateTime__c</columns>
    <columns>VolunteerActivity__c</columns>
    <columns>MinimumVolunteersNeeded__c</columns>
    <columns>MaximumVolunteersAllowed__c</columns>
    <columns>VolunteersAssigned__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>